--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,4 +1,12 @@
-<h1>HELLO WORLD!</h1>
+<h1>&#xa1;&#xa1;&#xa1;Recipe Book!!!</h1>
 
-<p>HELLO!</p>
+<h2>User List:</h2>
+
+<ul>
+  <% @users.each do |user| %>
+    <li><a href="/user/<%= user.id %>"><%= user.name %></a></li>
+  <% end %>
+</ul>
+
+
 
