--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -1,5 +1,8 @@
 <h1>Create New User</h1>
 
+<%= render('layouts/errors', :object => @lesson) %>
+
+
 <form action="/user/create" method="post">
   <label for="user_name">User Name</label>
   <input id="user_name" name="user[name]" type="text" />
