--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create New User</h1>
 
-<%= render('layouts/errors', :object => @lesson) %>
+<%= render('layouts/errors', :object => @user) %>
 
 
 <form action="/user/create" method="post">
