--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -5,4 +5,4 @@
 
 <p><a href="/user/<%= @user.id %>/edit">Edit User</a></p>
 <p><a href="/user/<%= @user.id %>/delete" data-confirm="Delete - Are you sure?" data-method="delete" rel="nofollow">Delete User</a></p>
-<%= render('layouts/navbar', :object => @lesson) %>>
+<%= render('layouts/navbar') %>
