--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,10 +1,23 @@
 <h1>&#xa1;&#xa1;&#xa1;Recipe Book!!!</h1>
 
-<h2>User List:</h2>
+
+<p><a href="/user/new">Create New User</a></p>
+<h2>User List</h2>
+
 
 <ul>
   <% @users.each do |user| %>
     <li><a href="/user/<%= user.id %>"><%= user.name %></a></li>
+  <% end %>
+</ul>
+
+<hr />
+
+<p><a href="/ingredients/new">Create New Ingredient</a></p>
+<h2>Ingredient List</h2>
+<ul>
+  <% Ingredient.all.each do |ingredient| %>
+    <li><a href="/ingredients/<%= ingredient.id %>"><%= ingredient.name %></a></li>
   <% end %>
 </ul>
 
