--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -23,11 +23,11 @@
 
 <hr />
 
-<p><a href="/recipe/new">Create New Recipes</a></p>
+<p><a href="/recipes/new">Create New Recipe</a></p>
 <h2>Recipe List</h2>
 <ul>
   <% Recipe.all.each do |recipe| %>
-  <li><a href="/recipes/<%= recipe.id %>"><%= recipe.id %></a></li>
+  <li><a href="/recipes/<%= recipe.id %>"><%= recipe.name %></a></li>
   <% end %>
 </ul>
 
