--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,12 +1,13 @@
-
+<!-- navbar  -->
+<%= render('layouts/navbar') %>
 
 <!-- header -->
 <div class="jumbotron">
 	<div class="container"> 
 		<h1>Recipe Book</h1>
-		<p>A website for you add and rate recipes</p> 
+		<p>A website for you to add and rate recipes</p> 
 		<p>
-			<a class="btn btn-primary btn-lg" role="button"> View Recipes</a>
+			<a class="btn btn-primary btn-lg" role="button" href="/recipes"> View Recipes</a>
 		</p>
 	</div> 
 </div> 
@@ -15,20 +16,24 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-4">
-			<h2>Add New Recipe</h2>
-			<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-			<p class="btn btn-default" href="#" role="button">Click Here</p>
+			<h2>Submit Recipes</h2>
+			<p>Share your amazing recipes with your fellow cooks so that they can cook and rate your creations.</p>
+			<p class="btn btn-info" href="#" role="button">Share Now</p>
 		</div>
 		<div class="col-md-4">
-			<h2>Add New Recipe</h2>
-			<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-			<p class="btn btn-default" href="#" role="button">Click Here</p>
+			<h2>Rate Recipes</h2>
+			<p>Tried a dish and it wasn't very good. Let your fellow cooks know to prevent them from making the same mistake.</p>
+			<p class="btn btn-warning" href="#" role="button">Help Cooks</p>
 		</div>
 		<div class="col-md-4">
-			<h2>Add New Recipe</h2>
-			<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-			<p class="btn btn-default" href="#" role="button">Click Here</p>
+			<h2>Search by Ingredient</h2>
+			<p>Have limited items in your fridge? Search through all the recipes by relevant ingredients!</p>
+			<p class="btn btn-danger" href="#" role="button">Search Now</p>
 		</div>
 	</div>
+	<hr> 
+	<footer>
+		<p>Katharine Chen | Epicodus Rails Assessment</p>
+	</footer>
 </div>
 
