--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,23 @@
 
 
-<p><a href="/">Return to Index</a></p>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle Navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>				
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">Recipe Book</a> 
+		</div>
+		<div class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+			<ul class="nav navbar-nav"></ul>
+				<li>
+					<a href="">Something</a> 
+				</li>
+				<li></li>
+			<ul class="nav navbar-nav navbar-right"></ul>
+		</div>
+	</div>
+</div>
