--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,23 +1,30 @@
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
 
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Recipe Book</a>
+    </div>
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-				<span class="sr-only">Toggle Navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>				
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="#">Recipe Book</a> 
-		</div>
-		<div class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-			<ul class="nav navbar-nav"></ul>
-				<li>
-					<a href="">Something</a> 
-				</li>
-				<li></li>
-			<ul class="nav navbar-nav navbar-right"></ul>
-		</div>
-	</div>
-</div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Users</a></li>
+        <li><a href="#">Recipes</a></li>
+        <li><a href="#">Ingredients</a></li>
+        <li><a href="#">Ratings</a></li>
+        <li><a href="#">Queries</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
