--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,8 +1,7 @@
-<h1><%= @user.name %></h1>
-
-
-<p>Eventually this page will display all of a user's recipes and reviews. But right now, just their name. This user has been lazy.</p>
+<% content_for(:title, "New contact | Recipe Book") %>
+<% content_for(:heading, "#{@user.name}") %>
+<% content_for(:content, "Eventually this page will display all of a user's recipes and reviews. But right now, just their name because this user has been lazy.") %>
 
 <p><a href="/user/<%= @user.id %>/edit">Edit User</a></p>
 <p><a href="/user/<%= @user.id %>/delete" data-confirm="Delete - Are you sure?" data-method="delete" rel="nofollow">Delete User</a></p>
-<%= render('layouts/navbar') %>
+
