--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,4 +1,5 @@
-<% content_for(:title, " Home | Recipe Book") %>
+<% content_for(:title, "Home | Recipe Book") %>
+<% content_for(:heading, "true" ) %>
 
 <!-- header -->
 <div class="jumbotron">
