--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -27,7 +27,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Recipes<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/recipes/new">Create New Recipe</a></li>
-            <li><a href="#">Find Recipe</a></li>
+            <li><a href="/recipes">Find Recipe</a></li>
           </ul>
         </li>
 
