--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,34 +1,58 @@
-<h1>Create New Recipe</h1>
+<% content_for(:title, "New Recipe | Recipe Book") %>
+<% content_for(:heading, "New Recipe") %>
+<% content_for(:content, "Share your ideas, use your imagination. Make awesome food.") %>
 
-<%= render('layouts/errors', :object => @recipe) %>
 
-<form action="/recipes/create" method="post">
-  <label for="recipe_name">Recipe Name </label>
-  <input id="recipe_name" name="recipe[name]" type="text" value="<%= @recipe.name %>">
-  <br />
-  <hr />
-  <h3>Ingredients</h3>
+<form action="/recipes/create" method="post" class="form-horizontal" role="form">
 
-  <form action="/portions/create" method="post">
-    <label for="ingredient_name">Recipe</label>
-    <select name="portion[ingredient_id]">
-      <% @ingredients.each do |ingredient| %>
-        <option value="<%= ingredient.id %>"><%= ingredient.name %></option>
-      <% end %>
-    </select>
-    <label for="quantity">Quantity</label>
-    <input id="quantity" name="portion[quantity]" type="number" value="<%= @portion.quantity %>">
-    <label for="unit_of_measurement">Unit of Measurement </label>
-    <input id="unit_of_measurement" name="portion[unit_of_measurement]" type="text" value="<%= @portion.unit_of_measurement%>">
+<!-- Add Names -->
+  <div class="form-group">
+    <label for="recipe_name" class="col-sm-2 control-label">Recipe Name</label>
+    <div class="col-sm-10">
+      <input type="text" id="recipe_name" value="<%=@recipe.name%>" name="recipe[name]" class="form-control">
+    </div>
+  </div>
+
+<!-- Add Content  -->
+  <div class="form-group">
+    <label for="recipe_content" class="col-sm-2 control-label">Directions</label>
+    <div class="col-sm-10">
+      <textarea id="recipe_content" name="recipe[content]" type="textarea" rows="12" cols="60" value="<%= @recipe.content %>" class="form-control" rows="3">Enter your instructions here </textarea>
+    </div>
+  </div>
+
+<!-- Add portions  -->
+  <div class="form-group">
+    <label>Ingredients</label>
+
+    print all of the portions that belong to recipes
+
+    <ul>
+    </ul>
+
+
+
+
+  <form action='/portions/create' method="post" class="form-horizontal" role="form">
+
+<!--     Add ingredients  -->
+
+
+<!-- Add quantity -->
+<!-- Add measurement  -->
+
+
   </form>
 
-  <hr />
-  <h3>Directions</h3>
-  <label for="recipe_content">Recipe Content </label>
-  <textarea id="recipe_content" name="recipe[content]" type="textarea" rows="12" cols="60" value="<%= @recipe.content %>">Enter your instructions here </textarea>
-  <br />
-  <button>Create Recipe</button>
+
+
+  </div>
+
+<!-- button -->
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Sign in</button>
+    </div>
+  </div>
 </form>
 
-
-<%= render('layouts/navbar') %>
