--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -2,6 +2,29 @@
 <% content_for(:heading, "#{@user.name}") %>
 <% content_for(:content, "Eventually this page will display all of a user's recipes and reviews. But right now, just their name because this user has been lazy.") %>
 
+<div class="container">
+	<div>
+		<h2><%=@user.name%>'s Recipes</h2>
+		<% if @user_recipes == nil %> 
+			<p>This user currently does not have any recipes.</p>
+		<% else %>
+			<% @user_recipes.each do |recipe| %> 
+				<%= recipe.name %>  
+			<% end %>
+		<% end %>   
+	</div>	
+<!-- 	<div>
+		<h2><%=@user.name%>'s Reviews</h2>
+	</div> -->
+</div>
+
+
 <p><a href="/user/<%= @user.id %>/edit">Edit User</a></p>
 <p><a href="/user/<%= @user.id %>/delete" data-confirm="Delete - Are you sure?" data-method="delete" rel="nofollow">Delete User</a></p>
+
+
+
+
+
+
 
