restructure the navbar

--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -1,3 +1,8 @@
+<% content_for(:title, "New Ingredient | Recipe New") %> 
+<% content_for(:heading, "New Ingredient") %> 
+<% content_for(:content, "There are many ingredients in recipes. ")
+
+
 
 <h1>Create New Ingredient</h1>
 
