--- a/app/views/recipes/all.html.erb
+++ b/app/views/recipes/all.html.erb
@@ -2,11 +2,17 @@
 <% content_for(:heading, "Recipe List") %>
 <% content_for(:content, "A complete list of all of the recipes on the website") %>
 
-<p> Here is a list of all of the recipes: </p>
-<ul>
-  <% @recipes.each do |recipe| %>
-    <li><%= recipe.name %></li>
-  <% end %>
-</ul>
+<div class="container">
+	<% if @recipes == [] %> 
+		<p>There are currently no recipes! Help grow the list by submitting one!</p> 
+	<% else %> 
+		<p> Here is a list of all of the recipes: </p>
+		<ul>
+	  		<% @recipes.each do |recipe| %>
+	    		<li><%= recipe.name %></li>
+	  		<% end %>
+		</ul>
+	<% end %> 
+</div> 
 
 
