--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -3,56 +3,29 @@
 <% content_for(:content, "Share your ideas, use your imagination. Make awesome food.") %>
 
 
-<form action="/recipes/create" method="post" class="form-horizontal" role="form">
+<div class="container"> 
 
-<!-- Add Names -->
-  <div class="form-group">
-    <label for="recipe_name" class="col-sm-2 control-label">Recipe Name</label>
-    <div class="col-sm-10">
-      <input type="text" id="recipe_name" value="<%=@recipe.name%>" name="recipe[name]" class="form-control">
+  <form action="/recipes/create" method="post" class="form-horizontal" role="form">
+  <!-- Add Names -->
+    <div class="form-group">
+      <label for="recipe_name" class="col-sm-2 control-label">Recipe Name</label>
+      <div class="col-sm-10">
+        <input type="text" id="recipe_name" value="<%=@recipe.name%>" name="recipe[name]" class="form-control" placeholder="Recipe Name">
+      </div>
     </div>
-  </div>
-
-<!-- Add Content  -->
-  <div class="form-group">
-    <label for="recipe_content" class="col-sm-2 control-label">Directions</label>
-    <div class="col-sm-10">
-      <textarea id="recipe_content" name="recipe[content]" type="textarea" rows="12" cols="60" value="<%= @recipe.content %>" class="form-control" rows="3">Enter your instructions here </textarea>
+  <!-- Add Content  -->
+    <div class="form-group">
+      <label for="recipe_content" class="col-sm-2 control-label">Directions</label>
+      <div class="col-sm-10">
+        <textarea id="recipe_content" name="recipe[content]" type="textarea" rows="12" cols="60" value="<%= @recipe.content %>" class="form-control" rows="3">Enter your instructions here </textarea>
+      </div>
+    </div> 
+  <!-- button -->
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-primary">Sign in</button>
+      </div>
     </div>
-  </div>
-
-<!-- Add portions  -->
-  <div class="form-group">
-    <label>Ingredients</label>
-
-    print all of the portions that belong to recipes
-
-    <ul>
-    </ul>
-
-
-
-
-  <form action='/portions/create' method="post" class="form-horizontal" role="form">
-
-<!--     Add ingredients  -->
-
-
-<!-- Add quantity -->
-<!-- Add measurement  -->
-
-
   </form>
-
-
-
-  </div>
-
-<!-- button -->
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Sign in</button>
-    </div>
-  </div>
-</form>
+</div> 
 
