--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,7 +24,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Queries <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/user/all">Find by Users</a></li>
-            <li><a href="#">Find by Ingredient</a></li>
+            <li><a href="/ingredients">Find by Ingredient</a></li>
             <li><a href="#">Find by Ratings</a></li> 
           </ul>
         </li>
