--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -18,7 +18,7 @@
 		<div class="col-md-4">
 			<h2>Submit Recipes</h2>
 			<p>Share your amazing recipes with your fellow cooks so that they can cook and rate your creations.</p>
-			<p class="btn btn-info" href="#" role="button">Share Now</p>
+			<p class="btn btn-info" href="/recipes/new" role="button">Share Now</p>
 		</div>
 		<div class="col-md-4">
 			<h2>Rate Recipes</h2>
@@ -28,7 +28,7 @@
 		<div class="col-md-4">
 			<h2>Search by Ingredient</h2>
 			<p>Have limited items in your fridge? Search through all the recipes by relevant ingredients!</p>
-			<p class="btn btn-danger" href="#" role="button">Search Now</p>
+			<p class="btn btn-danger" href="/ingredients" role="button">Search Now</p>
 		</div>
 	</div>
 	<hr>
