--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -1,18 +1,17 @@
-<% content_for(:title, "New Ingredient | Recipe New") %> 
+<% content_for(:title, "New Ingredient | Recipe Book") %> 
 <% content_for(:heading, "New Ingredient") %> 
-<% content_for(:content, "There are many ingredients in recipes. ")
+<% content_for(:content, "There are many ingredients in recipes. ") %> 
 
 
+<div class="container"> 
+	<h1>Create New Ingredient</h1>
 
-<h1>Create New Ingredient</h1>
+	<%= render('layouts/errors', :object => @ingredient) %>
 
-<%= render('layouts/errors', :object => @ingredient) %>
+	<form action="/ingredients/create" method="post">
+	  <label for="ingredient_name">Ingredient Name</label>
+	  <input id="ingredient_name" name="ingredient[name]" type="text" value="<%= @ingredient.name %>">
+	  <button>CREATE</button>
+	</form>
 
-
-<form action="/ingredients/create" method="post">
-  <label for="ingredient_name">Ingredient Name</label>
-  <input id="ingredient_name" name="ingredient[name]" type="text" value="<%= @ingredient.name %>">
-  <button>CREATE</button>
-</form>
-
-<%= render('layouts/navbar') %>
+</div> 
