--- a/app/views/user/all.html.erb
+++ b/app/views/user/all.html.erb
@@ -2,9 +2,11 @@
 <% content_for(:heading, "Users of Recipe Book") %>
 <% content_for(:content, "View the complete list of users for the recipe book. Click on the user to see what recipes they contributed.") %>
 
-<ul>
-  <% @users.each do |user| %>
-    <li><a href="/user/<%= user.id %>"><%= user.name %></a></li>
-  <% end %>
-</ul>
-
+<div class="container"> 
+	<p>There are currently <%= @users.length %> that are part of Recipe Book. For your convenience, the list of users are sorted in alphabetical order.</p>
+	<ul>
+	  <% @users.each do |user| %>
+	    <li><a href="/user/<%= user.id %>"><%= user.name %></a></li>
+	  <% end %>
+	</ul>
+</div> 
