--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -2,12 +2,12 @@
 <% content_for(:heading, "true" ) %>
 
 <!-- header -->
-<div class="jumbotron">
+<div class="jumbotron" id="special">
 	<div class="container">
 		<h1>Recipe Book</h1>
 		<p>A website for you to add and rate recipes</p>
 		<p>
-			<a class="btn btn-primary btn-lg" role="button" href="/recipes"> View Recipes</a>
+			<a class="btn btn-success btn-lg" role="button" href="/recipes"> View Recipes</a>
 		</p>
 	</div>
 </div>
@@ -18,17 +18,17 @@
 		<div class="col-md-4">
 			<h2>Submit Recipes</h2>
 			<p>Share your amazing recipes with your fellow cooks so that they can cook and rate your creations.</p>
-			<p class="btn btn-info" href="/recipes/new" role="button">Share Now</p>
+			<p class="btn btn-primary" href="/recipes/new" role="button">Share Now</p>
 		</div>
 		<div class="col-md-4">
 			<h2>Rate Recipes</h2>
 			<p>Tried a dish and it wasn't very good. Let your fellow cooks know to prevent them from making the same mistake.</p>
-			<p class="btn btn-warning" href="#" role="button">Help Cooks</p>
+			<p class="btn btn-primary" href="#" role="button">Help Cooks</p>
 		</div>
 		<div class="col-md-4">
 			<h2>Search by Ingredient</h2>
 			<p>Have limited items in your fridge? Search through all the recipes by relevant ingredients!</p>
-			<p class="btn btn-danger" href="/ingredients" role="button">Search Now</p>
+			<p class="btn btn-primary" href="/ingredients" role="button">Search Now</p>
 		</div>
 	</div>
 	<hr>
