--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -18,17 +18,17 @@
 		<div class="col-md-4">
 			<h2>Submit Recipes</h2>
 			<p>Share your amazing recipes with your fellow cooks so that they can cook and rate your creations.</p>
-			<p class="btn btn-primary" href="/recipes/new" role="button">Share Now</p>
+			<p><a class="btn btn-primary" href="/recipes/new" role="button">Share Now</a></p> 
 		</div>
 		<div class="col-md-4">
-			<h2>Rate Recipes</h2>
-			<p>Tried a dish and it wasn't very good. Let your fellow cooks know to prevent them from making the same mistake.</p>
-			<p class="btn btn-primary" href="#" role="button">Help Cooks</p>
+			<h2>Find Friends</h2>
+			<p>Check out if your friends have added new recipes. You might want to check it out before they figure out you don't really care.</p>
+			<p><a class="btn btn-primary" href="/user/all" role="button">Find Friends</a></p>
 		</div>
 		<div class="col-md-4">
 			<h2>Search by Ingredient</h2>
 			<p>Have limited items in your fridge? Search through all the recipes by relevant ingredients!</p>
-			<p class="btn btn-primary" href="/ingredients" role="button">Search Now</p>
+			<p><a class="btn btn-primary" href="/ingredients" role="button">Search Now</a></p>
 		</div>
 	</div>
 	<hr>
