--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,8 +16,15 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
 
-        <li class="active"><a href="/recipes">Recipe List</a></li>
-        <li><a href="/recipes/new">Create New Recipe</a></li>
+        <li><a href="/recipes">Recipe List</a></li>
+    
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Create Recipes and Ingredients<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/recipes/new">Create New Recipe</a></li>
+            <li><a href="/ingredients/new">Create New Ingredients</a></li>
+          </ul>
+        </li>
 
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Queries <span class="caret"></span></a>
