--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -6,24 +6,36 @@
 <div class="container"> 
 
   <form action="/recipes/create" method="post" class="form-horizontal" role="form">
-  <!-- Add Names -->
+    <input name="_method" type="hidden" value="patch">
+
+    <!-- Add Names -->
     <div class="form-group">
       <label for="recipe_name" class="col-sm-2 control-label">Recipe Name</label>
       <div class="col-sm-10">
         <input type="text" id="recipe_name" value="<%=@recipe.name%>" name="recipe[name]" class="form-control" placeholder="Recipe Name">
       </div>
     </div>
-  <!-- Add Content  -->
+
+    <!-- Checkbox with all ingredients  -->
     <div class="form-group">
-      <label for="recipe_content" class="col-sm-2 control-label">Directions</label>
+      <label class="col-sm-2 control-label" for="ingredients">Ingredients</label>
+      <% Ingredient.all.each do |ingredient| %> 
+        <input type="checkbox" name="recipe[ingredient]" value="<%=ingredient.id%>"> <%=ingredient.name %><br>
+      <% end %> 
+    </div>
+
+    <!-- Add Content  -->
+    <div class="form-group">
+      <label for="recipe_content" class="col-sm-2 control-label">Instructions</label>
       <div class="col-sm-10">
         <textarea id="recipe_content" name="recipe[content]" type="textarea" rows="12" cols="60" value="<%= @recipe.content %>" class="form-control" rows="3">Enter your instructions here </textarea>
       </div>
     </div> 
-  <!-- button -->
+
+    <!-- button -->
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Sign in</button>
+        <button type="submit" class="btn btn-primary">Add Instructions</button>
       </div>
     </div>
   </form>
