--- a/app/views/ingredients/show_all.html.erb
+++ b/app/views/ingredients/show_all.html.erb
@@ -3,13 +3,15 @@
 <% content_for(:content, "Ingredients are used in my recipes. Click on recipes below each ingredients to see more specific instructions.") %> 
 
 <div class="container"> 
-	<p>There are currently recipes for <%= @ingredients.length %> ingredients. Enjoy! </p>
-	<% @ingredients.each do |ingredient| %>
-	    <h4><%= ingredient.name %></h4>
-	<% end %>
+	<p>There are currently <b><%= @ingredients.length %></b> ingredients that are part of our users' recipes. As the site grows, the nubmer of different ingredients and recipes grows. Click on an ingredient to see recipes that use the ingredient.</p>
+	<p>For your convenience, the list of ingredients are sorted in alphabetical order.</p>
+	
+	<ul>
+		<% @ingredients.each do |ingredient| %>
+		    <li><a href="/ingredients/<%=ingredient.id%>"><%= ingredient.name %></a></li>
+		<% end %>
+	</ul>
 
 </div> 
 
-
-<!-- recipes has (portions(has ingredients)) -->
 
