--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,18 +1,37 @@
 <% content_for(:title, "#{@recipe.name} | Recipe Book") %>
 <% content_for(:heading, "#{@recipe.name}") %>
-<% content_for(:content, "#The recipe for {@recipe.name} is provided by #{@recipe.user}") %>
+<% content_for(:content, "The recipe for #{@recipe.name} is provided by #{@recipe.user.name}.")%>
 
 <div class="container"> 
-	<h1><%= @recipe.name %></h1>
 
-	<p><%= @recipe.name %> has the following portions:</p>
-
-	<ul>
-	  <% # loop through all recipes using this ingredient here and put them in <li>s %>
-	</ul>
-
-
-	<p><a href="/recipes/<%= @recipe.id %>/edit">Edit Recipe</a></p>
-	<p><a href="/recipes/<%= @recipe.id %>/delete" data-confirm="Delete - Are you sure?" data-method="delete" rel="nofollow">Delete Recipe</a></p>
+	<table class="table table-hover">
+		<tr>
+			<td><b>Recipe</b></td>
+			<td><%=@recipe.name %></td>
+		</tr>
+		<tr>
+			<td><b>Contributor</b></td>
+			<td><%=@recipe.user.name %></td>
+		</tr>
+		<tr>
+			<td><b>Ingredients</b></td>
+			<td>
+				<% @recipe.portions.all.each do |portion| %> 
+					<li><%=portion.quantity%> <%=portion.unit_of_measurement %> <%=portion.ingredient.name %></li>
+				<% end %> 
+			</td>
+		</tr>
+		<tr>
+			<td><b>Instructions</br></td>
+			<td><%=@recipe.content%></td>
+		</tr>
+		<tr>
+			<td><b>Options</b></td>
+			<td>
+				<li><p><a href="/recipes/<%= @recipe.id %>/edit">Edit Recipe</a></p></li>
+				<li><p><a href="/recipes/<%= @recipe.id %>/delete" data-confirm="Delete - Are you sure?" data-method="delete" rel="nofollow">Delete Recipe</a></p></li>
+			</td>
+		</tr>
+	</table>	
 </div> 
 
