--- a/app/views/ingredients/edit.html.erb
+++ b/app/views/ingredients/edit.html.erb
@@ -1,13 +1,22 @@
-<h1>EDITING <%= @ingredient.name %></h1>
+<% content_for(:title, "#{@ingredient.name} | Edit | Recipe Book") %>
+<% content_for(:heading, "#{@ingredient.name}") %>
+<% content_for(:content, "Wrong information? Fix it.") %>
 
-<%= render('layouts/errors', :object => @user) %>
+<%= render('layouts/errors', :object => @ingredient) %>
 
-<form action="/ingredients/<%= @ingredient.id %>" method="post">
-  <input name="_method" type="hidden" value="patch">
-  <label for="ingredient_name">Ingredient Name</label>
-  <input id="ingredient_name" type="text" name="ingredient[name]" value="<%= @ingredient.name %>">
-  <button>UPDATE</button>
-</form>
+<div class="container">
 
+	<p>Please change the information you like to edit:</p>
 
-<%= render('layouts/navbar') %>
+	<form action="/ingredients/<%= @ingredient.id %>" method="post" role="form">
+
+		<input name="_method" type="hidden" value="patch">
+	  	<div class="form-group">
+		  	<label for="ingredient_name">Ingredient Name</label> 
+		  	<input id="ingredient_name" type="text" name="ingredient[name]" value="<%= @ingredient.name %>">
+			</div> 
+	  <button class="btn btn-primary">UPDATE</button>
+	</form>
+
+</div> 
+
