--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -2,41 +2,36 @@
 <% content_for(:heading, "New Recipe") %>
 <% content_for(:content, "Share your ideas, use your imagination. Make awesome food.") %>
 
+<%= render('layouts/errors', :object => @recipe) %>
 
 <div class="container"> 
 
-  <form action="/recipes/create" method="post" class="form-horizontal" role="form">
+  <form action="/recipes/create" method="post" role="form">
     <input name="_method" type="hidden" value="patch">
 
     <!-- Add Names -->
     <div class="form-group">
-      <label for="recipe_name" class="col-sm-2 control-label">Recipe Name</label>
-      <div class="col-sm-10">
-        <input type="text" id="recipe_name" value="<%=@recipe.name%>" name="recipe[name]" class="form-control" placeholder="Recipe Name">
-      </div>
+      <label for="recipe_name">Recipe Name</label>
+      <input type="text" id="recipe_name" value="<%=@recipe.name%>" name="recipe[name]" class="form-control" placeholder="Recipe Name">
     </div>
 
     <!-- Checkbox with all ingredients  -->
-    <div class="form-group">
-      <label class="col-sm-2 control-label" for="ingredients">Ingredients</label>
-      <% Ingredient.all.each do |ingredient| %> 
-        <input type="checkbox" name="recipe[ingredient]" value="<%=ingredient.id%>"> <%=ingredient.name %><br>
-      <% end %> 
-    </div>
+<!--     <div class="form-group">
+      <label for="ingredients">Ingredients</label></br>
+      <%# Ingredient.all.each do |ingredient| %> 
+        <input type="checkbox" name="recipe[ingredient]" value="<%=ingredient.id%>"> <%#=ingredient.name %><br>
+      <%# end %> 
+    </div> -->
 
     <!-- Add Content  -->
     <div class="form-group">
-      <label for="recipe_content" class="col-sm-2 control-label">Instructions</label>
-      <div class="col-sm-10">
-        <textarea id="recipe_content" name="recipe[content]" type="textarea" rows="12" cols="60" value="<%= @recipe.content %>" class="form-control" rows="3">Enter your instructions here </textarea>
-      </div>
+      <label for="recipe_content">Instructions</label>
+      <textarea id="recipe_content" name="recipe[content]" type="textarea" rows="12" cols="60" value="<%= @recipe.content %>" class="form-control" rows="3">Enter your instructions here </textarea>
     </div> 
 
     <!-- button -->
     <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Add Instructions</button>
-      </div>
+      <button type="submit" class="btn btn-primary">Add Instructions</button>
     </div>
   </form>
 </div> 
