--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -1,53 +1,29 @@
 <% content_for(:title, "New User | Recipe Book") %> 
-<% content_for(:heading, "New User") %> 
+<% content_for(:heading, "New User Signup") %> 
 <% content_for(:content, "Become a new member of Recipe Book, and enjoy sharing recipes with individuals of all cultures all over the world.") %> 
 
 
-<div class="container">
+<div class="container"> 
+  
+  <!--   Error Messages  -->
   <div class="row">
-    <%= render('layouts/errors', :object => @user) %>
+    <%= render('layouts/errors', :object => @user) %></br> 
   </div>
-  <div class="row">
 
-  <!--     Form for creating new users  -->
-    <div class="col-md-6" class="spacing">
-      <form class="form-horizontal" role="form" action="/user/create" method="post">
-        <h2>Create a New User</h2>
-        <p>As a user, you are able to do a brunch of things. So sign up!</p>
-        <div class="form-group">
-          <label for="user_name" class="col-sm-2 control-label">User Name:</label>
-          <div class="col-sm-10">
-            <input id="user_name" name="user[name]" class="form-control" type="text" placeholder="Enter the username you want to use for the site.">
-          </div>
-        </div>
+  <form role="form" class="form-horizontal" action="/user/create" method="post">
 
-        <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary">Create User</button>
-          </div>
-        </div>
-      </form>
+    <h2>Create a New User</h2>
+    <p>As a user, you are able to do a brunch of things. So sign up!</p>
+
+    <div class="form-group">
+      <label for="user_name">User Name</label>
+      <input id="user_name" name="user[name]" class="form-control" type="text" placeholder="Enter the username you want to use for the site.">      
     </div>
 
-    <!-- Things Users can do  -->
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form> 
 
-    <div class="col-md-6" class="spacing">
-      <p>Here are the things users can do:</p>
-      <ul>
-        <li>One</li>
-        <li>Two</li>
-      </ul>
-    </div>
-  </div><!-- Ending of the row--> 
-</div>
-
-
-
-
-
-
-
-
+</div> 
 
 
 
