--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -7,7 +7,6 @@
 <div class="container"> 
 
   <form action="/recipes/create" method="post" role="form">
-    <input name="_method" type="hidden" value="patch">
 
     <!-- Add Names -->
     <div class="form-group">
@@ -15,13 +14,28 @@
       <input type="text" id="recipe_name" value="<%=@recipe.name%>" name="recipe[name]" class="form-control" placeholder="Recipe Name">
     </div>
 
-    <!-- Checkbox with all ingredients  -->
-<!--     <div class="form-group">
-      <label for="ingredients">Ingredients</label></br>
-      <%# Ingredient.all.each do |ingredient| %> 
-        <input type="checkbox" name="recipe[ingredient]" value="<%=ingredient.id%>"> <%#=ingredient.name %><br>
-      <%# end %> 
-    </div> -->
+<!--     Add Portions  -->
+    <div class="form-group"> 
+      <label for="portion_ingredient">Ingredient</label> 
+      <select class="form-control"> 
+        <% Ingredient.all.each do |ingredient| %>
+          <option value="<%= ingredient.id %>" name="recipe[portion[ingredient_id]]"><%= ingredient.name %></option>
+        <% end %> 
+      </select>
+    </div>
+
+<!--     not sure why this is not working  -->
+    <input type="hidden" name="recipe[portion[recipe_id]]" value="<%= @recipe.id%>">
+
+    <div class="form-group">
+      <label for="portion_quantity">Quantity</label>
+      <input type="integer" name="recipe[portion[quantity]]" class="form-control" placeholder="Ingredient Quantity">  
+    </div>
+
+    <div class="form-group">
+      <label for="portion_unit_of_measurement">Unit of Measurement</label>
+      <input type="text" name="recipe[portion[unit_of_measurement]]" class="form-control" placeholder="Unit of Measurement">  
+    </div>
 
     <!-- Add Content  -->
     <div class="form-group">
@@ -31,8 +45,7 @@
 
     <!-- button -->
     <div class="form-group">
-      <button type="submit" class="btn btn-primary">Add Instructions</button>
+      <button type="submit" class="btn btn-primary">Save Recipe</button>
     </div>
   </form>
 </div> 
-
