Deleted User class

--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -18,7 +18,7 @@
 		<div class="col-md-4">
 			<h2>Submit Recipes</h2>
 			<p>Share your amazing recipes with your fellow cooks so that they can cook and rate your creations.</p>
-			<p><a class="btn btn-primary" href="/recipes/new" role="button">Share Now</a></p>
+			<p><a class="btn btn-primary" href="/users/recipes/new" role="button">Share Now</a></p>
 		</div>
 		<div class="col-md-4">
 			<h2>Find Friends</h2>
