--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -3,16 +3,16 @@
 <% content_for(:content, "A complete list of all of the recipes on the website") %>
 
 <div class="container">
-	<% if @recipes == [] %> 
-		<p>There are currently no recipes! Help grow the list by submitting one!</p> 
-	<% else %> 
+	<% if @recipes == [] %>
+		<p>There are currently no recipes! Help grow the list by submitting one!</p>
+	<% else %>
 		<p> Here is a list of all of the recipes: </p>
 		<ul>
 	  		<% @recipes.each do |recipe| %>
-	    		<li><a href="/recipes/<%=recipe.id%>"><%= recipe.name %></a></li>
+	    		<li><a href="users/<%=recipe.user.id %>/recipes/<%=recipe.id%>"><%= recipe.name %></a></li>
 	  		<% end %>
 		</ul>
-	<% end %> 
-</div> 
+	<% end %>
+</div>
 
 
