Fix website to match lack of the User object

--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -18,12 +18,12 @@
 		<div class="col-md-4">
 			<h2>Submit Recipes</h2>
 			<p>Share your amazing recipes with your fellow cooks so that they can cook and rate your creations.</p>
-			<p><a class="btn btn-primary" href="/users/recipes/new" role="button">Share Now</a></p>
+			<p><a class="btn btn-primary" href="/recipes/new" role="button">Share Now</a></p>
 		</div>
 		<div class="col-md-4">
-			<h2>Find Friends</h2>
-			<p>Check out if your friends have added new recipes. You might want to check it out before they figure out you don't really care.</p>
-			<p><a class="btn btn-primary" href="/users" role="button">Find Friends</a></p>
+			<h2>View All Recipes</h2>
+			<p>Check all of the recipes in the book! If you add more, you will obviously see more!</p>
+			<p><a class="btn btn-primary" href="/recipes" role="button">Find Recipes</a></p>
 		</div>
 		<div class="col-md-4">
 			<h2>Search by Ingredient</h2>
